tests/baselines/reference/parserMemberAccessorDeclaration2.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration2.ts (1 errors) ====
    class C {
      get "b"() { }
          ~~~
!!! parserMemberAccessorDeclaration2.ts(2,7): error TS2126: Getters must return a value.
    }